# Design_Patterns_Modern_CPP

./: .gitignore  GTest.md  README.md
Section_10/Decorator/: Decorator.sln
Section_10/Decorator/1_Dynamic_Decorator/: 1_Dynamic_Decorator.vcxproj  1_Dynamic_Decorator.vcxproj.filters  (+1 more)
Section_11/Bloom/: Bloom.cpp  Bloom.vcxproj  Console.h
Section_12/Flyweight/: Flyweight.sln
Section_13/Proxy/: Proxy.sln
Section_14/1_pointer_chain/: CMakeLists.txt
Section_14/2_broker_chain/: CMakeLists.txt
Section_14/3_assignment/: CMakeLists.txt
Section_15/1_Comand/: CMakeLists.txt
Section_15/2_Undo_Operations/: CMakeLists.txt
Section_15/3_Composite_Command_(Macro)/: CMakeLists.txt
Section_15/4_Assignment/: CMakeLists.txt
Section_16/1_handmade_interpreter/: CMakeLists.txt
Section_16/3_Assignment/: CMakeLists.txt
Section_17/1_Iterator/: CMakeLists.txt
Section_17/2_Boost_iterator/: Behavioral.Iterator.facade.cpp
Section_17/3_Assignment/: CMakeLists.txt
Section_18/1_ChatRoom/: CMakeLists.txt
Section_18/2_EventBroker/: CMakeLists.txt
Section_18/3_Assignment/: CMakeLists.txt
Section_19/1_Memento/: CMakeLists.txt
Section_19/2_Assignment/: CMakeLists.txt
Section_19/2_Assignment/builder/: main-execution.sh
Section_19/2_Assignment/src/: exercise.cpp
Section_2/SOLID_Principles/: SOLID_Principles.sln
Section_20/1_Observer/: CMakeLists.txt
Section_20/2_Assignment/: CMakeLists.txt
Section_21/1_Classic/: CMakeLists.txt
Section_21/2_Handmade/: CMakeLists.txt
Section_21/3_Boost_MSM/: CMakeLists.txt
Section_21/4_Assignment/: CMakeLists.txt
Section_22/1_Dynamic_Strategy/: CMakeLists.txt
Section_22/2_Static_Strategy/: CMakeLists.txt
Section_22/3_Assignment/: CMakeLists.txt
Section_23/1_Template_Method/: CMakeLists.txt
Section_23/2_Assignment/: CMakeLists.txt
Section_24/1_Intrusive_visitor/: CMakeLists.txt
Section_24/2_Reflective_visitor/: CMakeLists.txt
Section_24/3_Classic_visitor/: CMakeLists.txt
Section_24/4_Acyclic_visitor/: CMakeLists.txt
Section_24/5_Multimethods/: CMakeLists.txt  Multimethods_document.txt
Section_24/6_Variant_and_std_visit/: CMakeLists.txt
Section_24/7_Assignment/: CMakeLists.txt
Section_3/Builder/: Builder.sln
Section_4/Factories/: Factories.sln
Section_5/Prototype/: Prototype.sln
Section_6/Singleton/: Singleton.sln
Section_7/Adapter/: Adapter.sln
Section_8/Bridge/: Bridge.sln
Section_9/Composite/: Composite.sln
(+212 files in other folders)
